--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,5 +43,8 @@
     "vue-i18n": "9.13.1",
     "vue-router": "4.4.0",
     "zod": "3.23.8"
+  },
+  "dependencies": {
+    "vue3-toastify": "^0.2.8"
   }
 }
