Toast implementálása a docker-be, illetve a main.js-be. AZ egy termék ízlistájának lekérésének alapjai elkészültek, ezt kell majd tovább dolgozni.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -38,7 +38,9 @@ RUN npm cache add @vueuse/core@10.11.0
 RUN npm cache add @vueuse/head@2.0.0
 RUN npm cache add @vueuse/components@10.11.0
 RUN npm chache add @fortawesome/vue-fontawesome
-RUN npm cache add @vue3-toastify
+RUN npm cache add vue3-toastify@latest
+RUN npm cache add install swiper@latest
+
 
 RUN npm i
 
