Átalakításra és elkészítésre került a korábbiakban használt logikai alapra a ProductStore továbbfejlesztése. Dinamikus képkezeléssel a változó ízválasztékok fejében, localstore alapú 'meta-adatok' követésével és betöltésével az adott termék oldalán. Továbbá elkészült az alapja a MarkDown programspecifikációs dokumentumnak.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -40,6 +40,7 @@ RUN npm cache add @vueuse/components@10.11.0
 RUN npm chache add @fortawesome/vue-fontawesome
 RUN npm cache add vue3-toastify@latest
 RUN npm cache add install swiper@latest
+RUN npm cache add vue-star-rating@next
 
 
 RUN npm i
