--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
     "zod": "3.23.8"
   },
   "dependencies": {
+    "vue-multiselect": "^3.0.0-beta.3",
+    "vue-star-rating": "^2.1.0",
     "vue3-toastify": "^0.2.8"
   }
 }
