tesztelési környezet beállítása, előkészítése.

--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -3,8 +3,8 @@ DB_ROOT_PASSWORD=root_p_ssW0rd
 PMA_ABSOLUTE_URI=http://pma.vm1.test
 
 APP_NAME=Laravel
-APP_ENV=testing
-APP_KEY=base64:XwQ6tmuVonXhBGbudnyVR+u6/VhqpJORtb2xGLnKOP4=
+APP_ENV=local
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://backend.vm1.test
@@ -26,7 +26,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=testdb.sqlite
+DB_DATABASE=BuzzShop
 DB_USERNAME=laravel
 DB_PASSWORD=laravel
 
